@@ -1,5 +1,9 @@
 2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Drawing/MapDrawer.cs: cleanup
+
+2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
+
 	* Drawing/MapDrawer.cs: draw image symbol on center point
 
 2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
